cambio a la experiencia laboral y el sobre mi

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar ">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/images/logozera.png" alt="Bootstrap" width="30" height="24" class="logoNinja"> Juampi Corzo Dev
+                <img src="/images/logozera.png" alt="Bootstrap" width="30" height="24" class="logoNinja"> Ezequiel Fuentes Martin | Mideno
             </a>
         </div>
     </nav>
@@ -30,7 +30,6 @@
                 <div class="col-8"></div>
                 <div class="col-4">
                     <h1>BIENVENIDOS A MI PORTFOLIO</h1>
-                    <h4>BY JUAMPI CORZO</h4> <br>
                     <button type="button" class="btn">Contratar</button>
                 </div>
             </div>
@@ -46,7 +45,7 @@
                         Un poco sobre mi
                     </h1>
                     <p>
-                        Mi nombre es Juan Pablo Corzo Barrera, tengo 21 años de edad, nací en una provincia llamada La Rioja de Argentina. Desde que soy muy pequeñito me gustan las computadoras,luego me fui adentrando en el mundo del diseño y finalmente terminé encontrando un gran gusto por la programación FrontEnd y el Ux/Ui
+		    Mi nombre es Ezequiel Fuentes Martin, aprendi a programar por primera vez a los 16 años con un curso de python y otro de diagramas de flujo, me gusta aprender los principios y funcionamientos basicos de todo lo que estudio, mi pasion es la resolucion de problemas por lo que me gusta mucho la cyberseguridad y el hacking, ademas de las matematicas y, por consecuencia, la inteligencia artificial, tengo conocimiento practico en todos estos temas a pesar de considerar que todavia me queda una infinidad de cosas por aprender (y espero que siga siendo asi).
                     </p>
                 </div>
                 <div class="col-md-2"></div>
@@ -196,7 +195,7 @@
                             Mi experiencia
                         </h2>
                         <p class="center">
-                            En cuanto a mi experiencia laboral, me encuentro realizando una pasantia en area IT del Ministerio de Infraestrucutra, ademas de estar en un proyecto para la empresa Animal Zoo.
+                            actualmente estoy trabajando en <a href="https://iparatodos.com.ar/">Internet Para Todos</a> en el area de cyberseguridad y tambien en <a href="https://www.instagram.com/animalzoolr/">AnimalZoo</a> programando el backend de un sistema de informacion para toda la empresa.
                         </p>
                     </div>
                     <div class="col-md-4">
