modificaciones version 1 completada

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="col-8"></div>
                 <div class="col-4">
                     <h1>BIENVENIDOS A MI PORTFOLIO</h1>
-                    <button type="button" class="btn">Contratar</button>
+                    <button type="button" class="btn" onClick="document.getElementById('contratar').scrollIntoView();">Contratar</button>
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@
                         Un poco sobre mi
                     </h1>
                     <p>
-		    Mi nombre es Ezequiel Fuentes Martin, aprendi a programar por primera vez a los 16 años con un curso de python y otro de diagramas de flujo, me gusta aprender los principios y funcionamientos basicos de todo lo que estudio, mi pasion es la resolucion de problemas por lo que me gusta mucho la cyberseguridad y el hacking, ademas de las matematicas y, por consecuencia, la inteligencia artificial, tengo conocimiento practico en todos estos temas a pesar de considerar que todavia me queda una infinidad de cosas por aprender (y espero que siga siendo asi).
+		    Mi nombre es Ezequiel Fuentes Martin, tengo 20 años, aprendi a programar por primera vez a los 16 años con un curso de python y otro de diagramas de flujo, me gusta aprender los principios y funcionamientos basicos de todo lo que estudio, mi pasion es la resolucion de problemas por lo que me gusta mucho la cyberseguridad y el hacking, ademas de las matematicas y, por consecuencia, la inteligencia artificial, tengo conocimiento practico en todos estos temas a pesar de considerar que todavia me queda una infinidad de cosas por aprender (y espero que siga siendo asi).
                     </p>
                 </div>
                 <div class="col-md-2"></div>
@@ -60,23 +60,16 @@
             <div class="card">
                 <div class="content">
                     <div class="pic">
-                        <img src="/images/TaskM.png" class="img-fluid" alt="">
+                        <img src="/images/fish_classification.jpg" class="img-fluid" alt="">
                     </div>
                     <h6 class="center espaciospekes">
-                        Task Manager
+                        Fish Classificator
                     </h6>
                     <p class="tMText">
-                        Con esta herramienta web podras anotar tus tareas y administrarlas para que nunca te olvides de nada importante.
+		    	Red neuronal que funciona como clasificador de peces de distintas especies
                     </p>
-                    <ul class="ulTm">
-                        <li>
-                            <i class="fa-brands fa-github">
-                                <a href="#">Git</a>
-                            </i>
-                        </li>
-                    </ul>
                     <hr>
-                    <button type="button" class="btn center tMBtn">Visitar</button>
+                    <a href="https://gitlab.com/ia3802014/Fish-classification" target="_blank" class="fcc-btn btn center tMBtn">Visitar</a>
                 </div>
             </div>
         </div>
@@ -84,24 +77,16 @@
             <div class="card crazyCards">
                 <div class="content">
                     <div class="pic">
-                        <img src="/images/TaskM.png" class="img-fluid" alt="">  
+                        <img src="/images/mkwordle.jpg" class="img-fluid" alt="">  
                     </div>
                     <h6 class="center cCSpace">
-                        Crazy Cards
+                        Mkwordle
                     </h6>
                     <p class="tMText">
-                        Un pequeño juego de navegador con el cual te podras divertir jugando con tus amigos,esta 
-                        orientado en mi grupo de amigos "Chiscicos FC"
+		    	Videojuego de navegador programado en React y Flask el cual trata de adivinar personajes de Mortal Kombat al estilo wordle (no CSS, no seguridad)
                     </p>
-                    <ul class="ulTm">
-                        <li>
-                            <i class="fa-brands fa-github">
-                                <a href="#">Git</a>
-                            </i>
-                        </li>
-                    </ul>
                     <hr>
-                    <button type="button" class="btn center tMBtn">Visitar</button>
+                    <a href="https://gitlab.com/games512914/mkwordle" target="_blank" class="fcc-btn btn center tMBtn">Visitar</a>
                 </div>
             </div>
         </div>
@@ -109,23 +94,16 @@
             <div class="card">
                 <div class="content">
                     <div class="pic">
-                        <img src="/images/TaskM.png" alt="" class="img-fluid">
+                        <img src="/images/mudaeclone.png" alt="" class="img-fluid">
                     </div>
                     <h6 class="center cCSpace">
-                        Proyecto NN
+                        Mudae Clone
                     </h6>
                     <p class="tMText">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro asperiores ducimus recusandae obcaecati quod officia minima.
+		    	Juego de colleccion de cartas para Discord programado en Python usando Mysql para la base de datos.
                     </p>
-                    <ul class="ulTm">
-                        <li>
-                            <i class="fa-brands fa-github">
-                                <a href="#">Git</a>
-                            </i>
-                        </li>
-                    </ul>
                     <hr>
-                    <button type="button" class="btn center tMBtn">Visitar</button>
+                    <a href="https://gitlab.com/misc5295414/mudae-clone" target="_blank" class="fcc-btn btn center tMBtn">Visitar</a>
                 </div>
             </div>
         </div>
@@ -133,27 +111,42 @@
             <div class="card">
                 <div class="content">
                     <div class="pic">
-                        <img src="/images/TaskM.png" alt="" class="img-fluid">
+                        <img src="/images/neuralnetwork.png" alt="" class="img-fluid">
                     </div>
                     <h6 class="center cCSpace">
-                        Proyecto NN
+                        Red neuronal sin librerias
                     </h6>
                     <p class="tMText">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro asperiores ducimus recusandae obcaecati quod officia minima.
+		    	Esto es una red neuronal de una sola neurona programada desde cero en Python utilizando solo Numpy para facilitar las operaciones matematicas,
+			 Este proyecto es una muestra de mis conocimientos sobre conceptos de inteligencia artificial.
                     </p>
-                    <ul class="ulTm">
-                        <li>
-                            <i class="fa-brands fa-github">
-                                <a href="#">Git</a>
-                            </i>
-                        </li>
-                    </ul>
                     <hr>
-                    <button type="button" class="btn center tMBtn">Visitar</button>
+                    <a href="https://gitlab.com/ia3802014/Simple-Neural-Network" target="_blank" class="fcc-btn btn center tMBtn">Visitar</a>
                 </div>
             </div>
         </div>
         <div class="col-md-2"></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-2 taskManager-card">
+            <div class="card">
+                <div class="content">
+                    <div class="pic">
+                        <img src="/images/rollingblueball.jpg" class="img-fluid" alt="">
+                    </div>
+                    <h6 class="center espaciospekes">
+                        RollingBlueBall
+                    </h6>
+                    <p class="tMText">
+		    	Demo de un videojuego programado en Unity en el que somos una esfera azul dificil de controlar que debe pasar distintos obstaculos
+                    </p>
+                    <hr>
+                    <a href="https://gitlab.com/misc5295414/rollingblueball" target="_blank" class="fcc-btn btn center tMBtn">Visitar</a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <section id="letritas">
@@ -162,10 +155,10 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8 center fraseCont">
                     
-                    <h2 class="frase"><i class="fa-solid fa-quote-left"></i> Si tu no trabajas por tus sueños, alguien te contratara para que trabajes por los suyos. <i class="fa-solid fa-quote-right"></i></h2>
+                    <h2 class="frase"><i class="fa-solid fa-quote-left"></i>La tecnología es una herramienta poderosa, pero su verdadero valor está en cómo la utilizamos para mejorar el mundo que nos rodea.<i class="fa-solid fa-quote-right"></i></h2>
 
                     <span class="">
-                        <p class="pintadito"><i>Steve Jobs</i></p>
+                        <p class="pintadito"><i>ChatGPT</i></p>
                     </span>
 
                 </div>
@@ -184,7 +177,8 @@
                             Mis estudios
                         </h2>
                         <p class="center">
-                            Actualmente estoy estudiando la Licenciatura de diseño y produccion multemedial, en la universidad (UnLaR), he cursado diseno ux/ui en Material D escuela y he realizado el programa winterHack de la escuela codeaRock, programa design seasson de Talleres a color. Ademas de haber cursado 2 años de Ing. en sistemas
+			Acutalmente estoy haciendo diversos cursos principalmente orientandome a conocimiento sobre inteligencia artificial, estoy aprendiendo sobre probabilidad, calculo y algebra lineal, al mismo tiempo estoy aplicando estos conocimientos en aprender Inteligencia Artificial y Reinforcement Learning. 
+			Por otro lado siempre estoy aprendiendo sobre las nuevas tecnologias y tecnicas como pueden ser mongodb, docker, ansible, etc.
                         </p>
                     </div>
                     <div class="col-md-4">
@@ -195,7 +189,7 @@
                             Mi experiencia
                         </h2>
                         <p class="center">
-                            actualmente estoy trabajando en <a href="https://iparatodos.com.ar/">Internet Para Todos</a> en el area de cyberseguridad y tambien en <a href="https://www.instagram.com/animalzoolr/">AnimalZoo</a> programando el backend de un sistema de informacion para toda la empresa.
+                            actualmente estoy trabajando en <a href="https://iparatodos.com.ar/" target="_blank">Internet Para Todos</a> en el area de cyberseguridad y tambien en <a href="https://www.instagram.com/animalzoolr/" target="_blank">AnimalZoo</a> programando el backend de un sistema de informacion para toda la empresa.
                         </p>
                     </div>
                     <div class="col-md-4">
@@ -206,7 +200,9 @@
                             Mis conocimientos
                         </h2>
                         <p class="center">
-                            Tengo conocimientos en diseño Ux/Ui, en tecnologias comos HTML5, CSS3, JAVA SCRIPT, REACT y en cuanto a backend tengo conocimientosen FIREBASE.
+			Tengo conocimiento avanzado de Python3 vanilla y de varias librerias del mismo como pueden ser Numpy, Pandas, flask, requests.
+			Tengo conocimiento sobre Redes neuronales y machine learning, ademas de su aplicacion practica utilizando Python (Reconocimiento de objetos en imagenes, reconocimiento facial, clasificacion de datos)
+			Tengo conocimiento en Cyberseguridad y hacking, se como realizar un trabajo de pentesting para detectar las vulnerabilidades mas comunes y se cuales son las buenas practicas tanto en networking como en programacion para aplicar en un proyecto.
                         </p>
                     </div>
                 </div>
@@ -224,7 +220,7 @@
 
         <!-- Formulario -->
 
-        <section>
+        <section id="contratar">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
@@ -232,15 +228,7 @@
                             Contactame y comentame tu propuesta
                         </h3>
                     </div>
-                    <div class="col-md-6 formulario">
-                        <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label"> Ingrese su email</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="mail@ejemplo.com">
-                          </div>
-                          <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label">Escriba su consulta</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Ingrese aqui su consulta o critica constructiva :D"></textarea>
-                          </div>
+		    <strong><p>ezefuentesmartin@gmail.com </p></strong>
                     </div>
                 </div>
             </div>
@@ -256,7 +244,7 @@
                         <i class="fa-regular fa-copyright espacios"> Designed by Juan Pablo Corzo Barrera</i> 
                     </p>
                     <p class="center contenidoFo redes">
-                        Seguime en mi redes
+                        Seguilo en sus
                         <br>
                         <br>
                         <a href="https://www.instagram.com/an.juampi/" target="_blank"  class="linksFooter">
